--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,12 @@
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <!-- Theme color for mobile browsers (Chrome/Safari) - not supported by Firefox/Opera -->
+    <!-- Theme color for mobile browsers (Chrome/Safari/Edge) -->
     <meta name="theme-color" content="#2E8B57" />
+    <meta name="msapplication-navbutton-color" content="#2E8B57" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="#2E8B57" />
+    <!-- Windows tile color -->
+    <meta name="msapplication-TileColor" content="#2E8B57" />
     <meta
       name="description"
       content="Transformer Cycle Hub - Transforming Waste, Building Communities"
